--- a/lessons/python/ep1-introduction.ipynb
+++ b/lessons/python/ep1-introduction.ipynb
@@ -92,10 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weight_kg=60"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -110,10 +112,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight_kg+5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +178,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weight_kg = 60.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weight_kg_text=\"weight in kilograms:\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -170,10 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -188,10 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms: 60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weight_kg_text, weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,10 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in pounds: 132.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"weight in pounds:\", 2.2 * weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,10 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,11 +325,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# weight_kg=65.0\n",
+    "print(\"weight in kilograms is now:\", weight_kg)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -267,10 +351,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms: 60.0 and in pounds: 132.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_lb=weight_kg * 2.2\n",
+    "print(weight_kg_text, weight_kg, 'and in pounds:', weight_lb)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,10 +383,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms: 100 and in pounds: 132.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_kg=100\n",
+    "print(weight_kg_text, weight_kg, 'and in pounds:', weight_lb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight in kilograms: 100 and in pounds: 220.00000000000003\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_lb=weight_kg * 2.2\n",
+    "print(weight_kg_text, weight_kg, 'and in pounds:', weight_lb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weight_lb: 50\n",
+      "weight_lb: 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight_lb=50\n",
+    "print(\"weight_lb:\", weight_lb)\n",
+    "weight_lb=weight_kg * 2\n",
+    "print(\"weight_lb:\", weight_lb)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -326,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,10 +510,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 1., ..., 3., 0., 0.],\n",
+       "       [0., 1., 2., ..., 1., 0., 1.],\n",
+       "       [0., 1., 1., ..., 2., 1., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 1., ..., 1., 1., 1.],\n",
+       "       [0., 0., 0., ..., 0., 2., 0.],\n",
+       "       [0., 0., 1., ..., 1., 1., 0.]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#fname is the fime name. path name はpython/data. \n",
+    "#If i have homefile, start with lesson on left side, \n",
+    "#python/ where file is located. \n",
+    "#second parameter is delimiter. , separate the numbers. コンマで、データを分ける。\n",
+    "numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#かっこの中、file name. second parameter は,コンマ。ナンパイではコンマで区切る。\n",
+    "data = numpy.loadtxt(fname='data/inflammation-01.csv', delimiter=',')\n",
+    "#we are not storing anything. but Python is capturing only. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -383,11 +562,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 1. ... 3. 0. 0.]\n",
+      " [0. 1. 2. ... 1. 0. 1.]\n",
+      " [0. 1. 1. ... 2. 1. 1.]\n",
+      " ...\n",
+      " [0. 1. 1. ... 1. 1. 1.]\n",
+      " [0. 0. 0. ... 0. 2. 0.]\n",
+      " [0. 0. 1. ... 1. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(data)"
+    "print(data)\n",
+    "#これでデータファイルをゲットした。"
    ]
   },
   {
@@ -399,6 +593,25 @@
     "```\n",
     "print(type(data))\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this tells what type the data set is. データのタイプをだす\n",
+    "print(type(data))\n",
+    "# ナンパイで　2dimention of array"
    ]
   },
   {
@@ -418,10 +631,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#what the contents of data \n",
+    "print(data.dtype)\n",
+    "#this case, nothing significant"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -438,10 +663,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60, 40)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# (row, collumnの順で)(0から始まる。Rは１から始まる). O based index. 00 ~ 59 and 39\n",
+    "print(data.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -459,10 +695,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first value in the data: 0.0\n",
+      "middle value in data: 13.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#最初のvalueと中間のvalueを出す\n",
+    "print(\"first value in the data:\", data[0,0])\n",
+    "print(\"middle value in data:\", data[30,20])\n",
+    "# 31番目と21番目のデータを見てることになる"
+   ]
   },
   {
    "cell_type": "markdown",
