update of episode1

--- a/lessons/python/ep1-introduction.ipynb
+++ b/lessons/python/ep1-introduction.ipynb
@@ -2096,6 +2096,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# これはmarkdownとrawの違いを示す。markdownにすると、太字にしたり、サイズを大きくしたりできる。\n",
+    "# rawは何もできない。この後、enterをすると、変わる。\n",
+    "# title1\n",
+    "## title2\n",
+    "\n",
+    "1. list1\n",
+    "1. list2\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
